--- a/templates/leave.html
+++ b/templates/leave.html
@@ -712,8 +712,8 @@
                   </li>
                 </ul>
                 <div class="execute_btn">
-                  <button id="apply_btn" type="submit" onclick="application_submit()" class="apply_btn">Apply</button>
-                  <button id="reject_btn" type="button" onclick="cancel_execution()" class="reject_btn">Reject</button>
+                  <button id="apply_btn" type="submit" onclick="application_submit()" class="apply_btn">Submit</button>
+                  <button id="reject_btn" type="button" onclick="cancel_execution()" class="reject_btn">Cancel</button>
                 </div>
               </form>
               <p id="application_error_text" class="text-danger font-weight-bold"></p>
