--- a/static/css/customize/addon/process_addon.css
+++ b/static/css/customize/addon/process_addon.css
@@ -1,25 +1,3 @@
-body{
-    user-select: none;
-}
-
-.addon_content{
-    background-color: #ffffff;
-    margin: 1rem 0rem;
-    padding-bottom: 1rem;
-    border-radius: 3px;
-}
-
-.addon_content .addon_head{
-    display: block;
-    list-style: none;
-    color: #00abad;
-    font-weight: 600;
-    font-size: 22px;
-    padding: 7px 5px 0px;
-    margin: 5px;
-    text-align: center;
-}
-
 .wrap_label label, .wrap_label_input label{
     display: block;
     margin-bottom: 1px;
@@ -27,7 +5,7 @@ body{
     font-size: 11px;
 }
 
-.addon_content form ul.creation_type li select{
+/*.addon_content form ul.creation_type li select{
     width: 200px;
     border-radius: 3px;
     padding: 3px;
@@ -38,7 +16,7 @@ body{
     font-size: 12px;
     font-weight: 600;
     cursor: pointer;
-}
+}*/
 
 .creation_type #addon_type{
     margin-left: 10px;
@@ -253,116 +231,3 @@ span.drop_users label{
     margin-left: 4px;
 }
 /*##########################################################*/
-
-/*########################################################## [Acknowledgement] ##########################################################*/
-.modal{
-    display: block;
-    position: fixed;
-    z-index: 100;
-    left: 0; top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    animation-name: fadeIn;
-    animation-duration: 0.4s
-}
-
-.modal-content{
-    position: fixed;
-    bottom: 0;
-    left: 32%;
-    background-color: #fefefe;
-    width: 50%;
-    animation-name: slideIn;
-    animation-duration: 0.4s;
-    margin-left: -5px;
-    text-align: center;
-}
-
-.close{
-    color: #000;
-    float: right;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.close:hover, .close:focus{
-    color: #ffffff;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.modal-header{
-    background-color: #00abad;
-    color: white;
-    font-size: 15px;
-    height: 40px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-right: 10px;
-    padding-left: 40%;
-    margin: -1px;
-}
-
-.modal-footer{
-    background-color: #00abad;
-    color: white;
-    font-size: 15px;
-    height: 40px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-right: 265px;
-    padding-left: 280px;
-    margin: -1px;
-}
-
-.modal-body{
-    padding: 15px;
-    height: 100px;
-}
-
-.modal-body p{
-    text-align: center;
-    font-size: 13px;
-    font-weight: 600;
-    margin: 2px;
-    color: #3e8e3e;
-}
-
-.modal-header h2{
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    margin: 5px;
-}
-
-.modal-footer h2{
-    font-size: 15px;
-    font-weight: 600;
-    text-align: center;
-    margin: 5px;
-}
-
-
-@-webkit-keyframes slideIn{
-    from {bottom: -300px; opacity: 0} 
-    to {bottom: 0; opacity: 1}
-}
-
-@keyframes slideIn{
-    from {bottom: -300px; opacity: 0}
-    to {bottom: 0; opacity: 1}
-}
-
-@-webkit-keyframes fadeIn{
-    from {opacity: 0} 
-    to {opacity: 1}
-}
-
-@keyframes fadeIn{
-    from {opacity: 0} 
-    to {opacity: 1}
-}
-/*########################################################## [Acknowledgement] ##########################################################*/
