--- a/static/css/customize/addon/shift_addon.css
+++ b/static/css/customize/addon/shift_addon.css
@@ -11,8 +11,25 @@
     margin: 15px 5px;
     padding: 3px;
 }
+#shift_assign_tab button.backshift_button{
+    position: absolute;
+    right: 0;
+    margin: 5px 15px;
+    border: none;
+    width: 10%;
+    font-size: 13px;
+    font-weight: 600;
+    border-radius: 3px;
+    padding: 5px;
+    background: #0587eb;
+    color: #fff;
+    outline: none;
+    box-shadow: 0px 3px 5px -3px #cccccc;
+}
+#shift_assign_tab button.backshift_button:hover{background: #0587ebba;}
 #shift_assign_tab form{
     text-align: center;
+    margin-top: 5rem;
 }
 /* ################ Card - Top Contents ################ */
 #shift_assign_tab ul.project_segment{
@@ -194,13 +211,30 @@
 
 
 /* ############################################## Shift - New Users Block ############################################## */
+#newuser_station_tab button.backshift_button{
+    position: absolute;
+    right: 0;
+    margin: 5px 15px;
+    border: none;
+    width: 10%;
+    font-size: 13px;
+    font-weight: 600;
+    border-radius: 3px;
+    padding: 5px;
+    background: #0587eb;
+    color: #fff;
+    outline: none;
+    box-shadow: 0px 3px 5px -3px #cccccc;
+}
+#newuser_station_tab button.backshift_button:hover{background: #0587ebba;}
+
 #newuser_station_tab{
     padding: 3px;
     margin-top: 2rem;
     width: 100%;
     display: inline-flex;
     height: 3rem;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     transition: all .30s ease-in;
 }
