--- a/static/css/customize/addon.css
+++ b/static/css/customize/addon.css
@@ -1,4 +1,7 @@
-/*Default - box-shadow: 2px 10px 15px -7px; */
+body{
+    user-select: none;
+}
+
 .addon_content{
     background-color: #ffffff;
     margin: 1rem 0rem;
@@ -17,178 +20,6 @@
     text-align: center;
 }
 
-/*########################################################## [General Tab] ##########################################################*/
-.addon_tab{
-  display: flex;
-  border-bottom: 1px solid #ccc;
-}
-
-.addon_tab button{
-    background: transparent;
-    border: none;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    outline: none;
-    cursor: pointer;
-    padding: 10px 15px;
-    margin-right: 1px;
-    font-size: 13px;
-    font-weight: 600;
-}
-
-.addon_tab button:hover{
-    background-color: #e5e5e5;
-}
-
-
-.addon_tab button i{
-    font-size: 15px;
-    padding: 5px;
-}
-
-/*########################################################## [Category Creation] ##########################################################*/
-/* Close & Reset - Settings */
-span.setup_close{
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    padding: 3px;
-    color: #222222ba;
-    font-size: 25px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: transform .7s ease-in-out;
-    width: 2%;
-    text-align: center;
-}
-span.setup_close:hover{
-    color: darkred;
-    transform: rotate(180deg);
-}
-span.required{color: red;padding: 0px 3px;}
-/* Close & Reset - Settings */
-
-[id^="category_creation"] input::placeholder{
-    color: #c0bfbf;
-    font-size: 12px;
-    text-align: center;
-}
-
-/* ####################### Unique settings - creation block ####################### */
-[id^="category_creation"]{
-    margin: 10px 0px;
-    width: 100%;
-    height: 3.5rem;
-    box-shadow: 0px 0px 3px 0px #8c8c8c;
-    padding: 3px 5px;
-    border-radius: 3px;
-}
-
-[id^="category_creation"] [class*="setup_block"]{
-    margin: 5px;
-    height: 100%;
-    display: inline-flex;
-    padding: 5px;
-}
-
-[id^="category_creation"] [class*="setup_block"] label{
-    font-size: 12px;
-    font-weight: 600;
-    margin: 2px;
-    padding: 3px;
-    text-align: center;
-    width: 50%;
-}
-
-[id^="category_creation"] [class*="setup_block"]#addon_process label{width: 75%;}
-
-[id^="category_creation"] [class*="setup_block"] input, [id^="category_creation"] [class*="setup_block"] select{
-    font-size: 13px;
-    height: 30px;
-    border-radius: 5px;
-    border: 1px solid #8c8c8c;;
-    outline: none;
-    color: #5c5c5c;
-    font-weight: 600;
-    padding: 3px;
-    margin: 0px 5px 0px 3px;
-}
-[id^="category_creation"] [class*="setup_block"] select{
-    width: 250%;
-    text-align: left;
-}
-[id^="category_creation"] [class*="setup_block"] input{
-    width: 100%;
-    text-align: center;
-}
-
-[id^="category_creation"] [class*="setup_block"] button{
-    font-size: 13px;
-    margin-right: 5px;
-    padding: 0px 15px;
-    width: 100%;
-    outline: none;
-    border: 0;
-    border-radius: 3px;
-    font-weight: 600;
-    height: 30px;
-}
-
-[id^="category_creation"] [class*="setup_block"] button.setup_clear{
-    background-color: #979797;
-    color: #fff;
-}
-[id^="category_creation"] [class*="setup_block"] button.setup_clear:hover{
-    box-shadow: 0px 1px 3px 0px #8c8c8c;
-}
-[id^="category_creation"] [class*="setup_block"] button.setup_add{
-    background-color: #0587eb;
-    color: #fff;
-}
-[id^="category_creation"] [class*="setup_block"] button.setup_add:hover{
-    box-shadow: 0px 1px 3px 0px #8c8c8c;
-}
-
-.error_block{
-    display: none;
-    margin-top: 1rem;
-    text-align: left;
-}
-.error_block p{
-    font-size: 13px;
-    font-weight: 600;
-    color: #f76a60;
-    margin: 0;
-}
-button[type="submit"].setup_submit{
-    display: inline-flex;
-    height: 30px;
-    width: 100px;
-    border: 0;
-    margin-top: 3rem;
-    margin-left: 90%;
-    color: #fff;
-    background: #00abad;
-    font-size: 13px;
-    font-weight: 600;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    border-radius: 3px;
-    position: relative;
-    transition: all .30s ease-In;
-    z-index: 20px;
-    outline: none;
-}
-button[type="submit"].setup_submit{
-    background-color: #00b1b3;
-}
-button[type="submit"].setup_submit:hover{
-    box-shadow: 0px 1px 3px 0px #8c8c8c;
-    background-color: #6f9e44;
-}
-
-/* ################################################# need to Change ################################################# */
 .wrap_label label, .wrap_label_input label{
     display: block;
     margin-bottom: 1px;
@@ -202,8 +33,8 @@ button[type="submit"].setup_submit:hover{
     padding: 3px;
     outline: none;
     color: #fff;
-    background-color: #00b1b3;
-    border: 1px solid #00b1b3;
+    background-color: #52c3c7;
+    border: 1px solid #52c3c7;
     font-size: 12px;
     font-weight: 600;
     cursor: pointer;
@@ -535,4 +366,3 @@ span.drop_users label{
     to {opacity: 1}
 }
 /*########################################################## [Acknowledgement] ##########################################################*/
-
